@@ -159,12 +159,12 @@ class FakeContentTableSeeder extends Seeder
             app(UpdateDeceasedInformation::class)->execute([
                 'account_id' => $this->contact->account_id,
                 'contact_id' => $this->contact->id,
-                'is_deceased' => (rand(1, 2) == 1) ? true : false,
-                'is_date_known' => (rand(1, 2) == 1) ? true : false,
+                'is_deceased' => rand(1, 2) == 1,
+                'is_date_known' => rand(1, 2) == 1,
                 'day' => (int) $birthdate->format('d'),
                 'month' => (int) $birthdate->format('m'),
                 'year' => (int) $birthdate->format('Y'),
-                'add_reminder' => (rand(1, 2) == 1) ? true : false,
+                'add_reminder' => rand(1, 2) == 1,
             ]);
         }
     }
@@ -177,13 +177,13 @@ class FakeContentTableSeeder extends Seeder
             app(UpdateBirthdayInformation::class)->execute([
                 'account_id' => $this->contact->account_id,
                 'contact_id' => $this->contact->id,
-                'is_date_known' => (rand(1, 2) == 1) ? true : false,
+                'is_date_known' => rand(1, 2) == 1,
                 'day' => (int) $birthdate->format('d'),
                 'month' => (int) $birthdate->format('m'),
                 'year' => (int) $birthdate->format('Y'),
-                'is_age_based' => (rand(1, 2) == 1) ? true : false,
+                'is_age_based' => rand(1, 2) == 1,
                 'age' => rand(1, 99),
-                'add_reminder' => (rand(1, 2) == 1) ? true : false,
+                'add_reminder' => rand(1, 2) == 1,
             ]);
         }
     }
@@ -255,13 +255,13 @@ class FakeContentTableSeeder extends Seeder
                 app(UpdateBirthdayInformation::class)->execute([
                     'account_id' => $this->contact->account_id,
                     'contact_id' => $relatedContact->id,
-                    'is_date_known' => (rand(1, 2) == 1) ? true : false,
+                    'is_date_known' => rand(1, 2) == 1,
                     'day' => (int) $relatedContactBirthDate->format('d'),
                     'month' => (int) $relatedContactBirthDate->format('m'),
                     'year' => (int) $relatedContactBirthDate->format('Y'),
-                    'is_age_based' => (rand(1, 2) == 1) ? true : false,
+                    'is_age_based' => rand(1, 2) == 1,
                     'age' => rand(1, 99),
-                    'add_reminder' => (rand(1, 2) == 1) ? true : false,
+                    'add_reminder' => rand(1, 2) == 1,
                 ]);
 
                 // set relationship
